--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -2,6 +2,7 @@
   "name": "netlify-functions",
   "version": "1.0.0",
   "dependencies": {
-    "googleapis": "^160.0.0"
+    "googleapis": "^160.0.0",
+    "firebase": "^12.3.0"
   }
 }
