--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "abc-music-library-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -16,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "firebase": "^12.3.0",
     "googleapis": "^160.0.0",
     "multer": "^2.0.2"
   }
