move into separate folder each function, add new get library score (empty)

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,6 @@
 [[headers]]
   for = "/.netlify/functions/*"
   [headers.values]
-    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Origin = "https://abc-music-library-cd1c3.web.app"
     Access-Control-Allow-Headers = "Content-Type"
     Access-Control-Allow-Methods = "GET, POST, OPTIONS"
